--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,18 +1,21 @@
-<h1>Events</h1>
+<h1>All Events</h1>
 
 <table>
-  <tr>
-    <th>List of Events</th>
-    <th></th>
-    <th></th>
+
+ <tr>
+    <th>Description</th>
+    <th>User Name</th>
+    <th>Twitter</th>
+    <th>Created On</th>
   </tr>
 
 <% @events.each do |event| %>
+
   <tr>
     <td><%= event.description %></td>
-     
-    <td><b>Created:</b> <%= time_ago_in_words(event.created_at) %> ago </td>
-  <td><b>Updated:</b> <%= time_ago_in_words(event.updated_at) %> ago </td>
+    <td><%= event.user.name %></td>
+    <td><%= event.user.handle %></td>
+    <td><%= time_ago_in_words(event.created_at) %> </td>
     <td><%= link_to 'Show', event %></td>
     <td><%= link_to 'Edit', edit_event_path(event) %></td>
     <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
