--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,12 +7,11 @@
     <th></th>
   </tr>
 
-<% @users.each do |user| %>
+  <% @users.each do |user| %>
   <tr>
+    <td><%= image_tag user.image.url(:thumb) %>
     <td><%= user.name %></td>
-     
-    <td><b>Created:</b> <%= time_ago_in_words(user.created_at) %> ago </td>
-  <td><b>Updated:</b> <%= time_ago_in_words(user.updated_at) %> ago </td>
+    <td><%= user.email %></td>
     <td><%= link_to 'Show', user %></td>
     <td><%= link_to 'Edit', edit_user_path(user) %></td>
     <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
