--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,28 +1,20 @@
-<h1>All Events</h1>
+<div>Hello, <%= current_user.name %>!</div>
+
+<h1>Here's what been happening </h1>
 
 <table>
 
- <tr>
-    <th>Description</th>
-    <th>User Name</th>
-    <th>Twitter</th>
-    <th>Created On</th>
-  </tr>
-
 <% @events.each do |event| %>
 
-  <tr>
-    <td><%= event.description %></td>
-    <td><%= event.user.name %></td>
-    <td>@<%= event.user.handle %></td>
-    <td><%= time_ago_in_words(event.created_at) %> </td>
-    <td><%= link_to 'Show', event %></td>
-    <td><%= link_to 'Edit', edit_event_path(event) %></td>
-    <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
+  <li>
+    <div><%= image_tag event.user.image.url(:thumb) %><%= event.user.name %> posted: <%= link_to event.description, event %><div>
+      <div><%= link_to 'Edit', edit_event_path(event) %></div>
+      <div><%= link_to 'Delete', event, method: :delete, data: { confirm: 'Are you sure?' } %></div>
+      <div><%= time_ago_in_words(event.created_at) %> </div>
+
+  </li>
 <% end %>
 </table>
 
-<br />
 
-<%= link_to 'New event', new_event_path %>
+<div><%= link_to 'New event', new_event_path %></div>
