--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,59 +2,36 @@
 <html>
 <head>
 	<title>StalkMe</title>
-    <!-- Obtain Bootstrap style sheet from CDN (online service) so it doesn't have to be on my machine -->
-   <!-- Obtain Bootstrap style sheet from CDN (online service) so it doesn't have to be on my machine -->
-    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet" media="screen">    
+    <%= stylesheet_link_tag    "application", :media => "all" %>
+    <%= javascript_include_tag "application" %>
+    <%= csrf_meta_tags %>
  
-   <style>
-      body {
-        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-      }
-    </style>
- 
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
+    <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script> 
+  
 </head>
 <body>
 
+<div class="navbar">
+  <div class="navbar-inner">
+    <a class="brand" href="#">Stalker</a>
+    <ul class="nav">
+      <li class="active">
+        <%= link_to "Events", events_path %> 
 
-<!-- Obtain latest version of jquery automatically -->
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <!-- Obtain Bootstrap javascript from CDN (online service) so it doesn't have to be on my machine -->
-     <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js"></script>
- 
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="#">Stalker</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
-            </ul>
-            <ul class="nav pull-right">
-              <% if user_signed_in? %>
-							<%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
-							<% else %>
-							<%= link_to "Sign In", new_user_session_path %>
-							<% end %>	
-							</ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
- 
-    <div class="container">
+      </li>
+      <% if user_signed_in? %>
+        <li class="pull-right" style='float: right;'><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+      <% else %>
+        <li><%= link_to "Sign In", new_user_session_path %></li>
+      <% end %>
+    </ul>
+  </div>
+</div>
 
- 
-    </div> <!-- /container -->
-    <%= yield %>
+<div class="container">
+   <%= yield %>
+ </div> 
+   
 </body>
 </html>
