--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,12 @@
  *= require_tree .
  */
 
-.navbar .navbar-inner .nav {
-	width: 93%;
+<style type="text/css">
+.login {
+	display: block;
+	float: right;
+	padding: 10px 20px 10px;
+	margin-right: 20px;
+	color: white;
 }
+</style>
