--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,7 +14,7 @@
 
   <div>
     <div><%= link_to event.description, event %><div>
-    <div><img src=  "<%= event.link %>" ></div>
+    <div><img width="300" height="300" src=  "<%= event.link %>" ></div>
       <div><%= link_to 'Edit', edit_event_path(event) %></div>
       <div><%= link_to 'Delete', event, method: :delete, data: { confirm: 'Are you sure?' } %></div>
       <div><%= time_ago_in_words(event.created_at) %> ago </div>
