--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,14 +1,14 @@
 <%= form_for @event do |f| %>
 	
 	<div class="field">
-    <%= f.label :description %><br />
-    <%= f.text_field :description %>
+    <%= f.label :description %> <%= f.text_field :description %>
   </div>
 
   <div class="field">
-    <%= f.text_field :link %> <%= f.label :link %>
+    <%= f.label :link %> <%= f.text_field :link %>
   </div>
 
-  <div class="actions" id="refreshevents">
+  <div class="actions">
 	 <%= f.submit "Post it!", class: 'btn btn-primary' %>
+  </div>
 <% end %>
