changes to sign in page

--- a/app/views/devise/shared/_twitterlink.erb
+++ b/app/views/devise/shared/_twitterlink.erb
@@ -1,5 +1,5 @@
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= link_to "Sign up with #{provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider), :class => 'btn btn-large btn-primary' %><br />
+    <%= link_to "Sign up with #{provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider), :class => 'btn btn-large btn-warning', :style => 'color: white' %><br />
   <% end -%>
 <% end -%>
