--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,3 +1,3 @@
 <div>
-<ul><%= link_to comment.user.name, user_path(comment.user) %> commented "<%= comment.body %>"</ul>
+<ul><%= link_to comment.user.name, user_path(comment.user) %> said "<%= comment.body %>"</ul>
 </div>
