--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
 <body <%= (params[:controller] == 'devise/sessions' && params[:action] == 'new') ? 'id=background' : '' %>>
 
-<div class="navbar navbar-fixed-top">
+<div class="navbar navbar-fixed-top navbar-inner">
   <div class="navbar-inner">
     <div class="container" >
       <%= link_to "Stalker", root_path, :class => 'brand' %>
