--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,25 @@
  *= require_self
  *= require_tree .
  */
+.navbar-inner {
+  background-color: #000; /* background color will be black for all browsers */
+  background-image: none;
+  background-repeat: no-repeat;
+  filter: none;
+}
+
+.profile{
+	font-size:20px !important;
+}
+
+.home_left{
+	margin-left:15px;
+}
+
+.event_link{
+	color:black;
+}
+
 .well [class^="span"] + [class^="span"]{
 	border-left: 1px solid #e3e3e3;
 }
@@ -25,8 +44,12 @@
 
 #background1 {
 	background: url(/assets/dan9.jpg) left top no-repeat fixed;
-
 }
+
+#background2 {
+	background: url(/assets/dan12.jpg) left top no-repeat fixed;
+}
+
 .sidebar-nav-fixed {
 	padding: 9px 0;
 	position:fixed;
