--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,35 +1,67 @@
 <body class="topbar-nav" <%= (params[:controller] == 'events' && params[:action] == 'index') ? 'id=background1' : '' %>>
 	<div class="container-fluid">
 		<div class="row-fluid">
-		<div class="well span8">
+		<div class="well span7" style = "margin-left:10px;">
 			
-			<ul>
-  			<h2>Stay Updated</h2>
+			<ul style = "margin-left:30px;">
+				<table>
+					<tr>
+						<h3>Let's Do Some Stalking..</h3>
+					</tr>
 				
-				<% @events.each do |event| %>	
-    			<div>
-    			<% if event.user.uid.present? %>
-					<%= image_tag Twitter.user(event.user.uid.to_i).profile_image_url %>
-	  			<% elsif event.user.image.present?%>
-	    		<%= image_tag event.user.image.url(:thumb)  %>
-	  			<% else %>
-	  			No image yet
-	  			<% end %>
+					<% @events.each do |event| %>	
+    			<tr>
+    				<% if event.user.uid.present? %>
+							<td valign="top"><%= image_tag Twitter.user(event.user.uid.to_i).profile_image_url %></td>
+	  				<% elsif event.user.image.present?%>
+	    				<td><%= image_tag event.user.image.url(:thumb)  %></td>
+	  				<% else %>
+	  					No image yet
+	  				<% end %>
 
-	    		<%= time_ago_in_words(event.created_at) %> ago, <%= link_to event.user.name, user_path(event.user) %> posted: <%= link_to event.description, event %>
-	    
-	    		<img width="400" height="400" src=  "<%= event.link %>" >
+	  			<td>
+	  				<div class="home_left">
+	  				<div style="font-weight:bold;">
+	  					<%= link_to event.user.name, user_path(event.user) %> 
+	  					<%= link_to "- #{event.description}", event, :class => "event_link" %></div>
+	  				<div>
+	  					<img width="450" height="400" src=  "<%= event.link %>" 
+	  								class="img-polaroid" style="margin-top:10px;"></div>
+	  				<div style="font-size:12px; margin-top:5px;"><%= link_to "Posted #{time_ago_in_words(event.created_at)} ago", event, :class => "event_link" %>
+	  				<% if event.comments.present? %>
+	  					- <%= link_to "#{event.comments.count} comments", event, :class => "event_link"%>
+	  				<% else %>
+	  				<% end %>
+	  				<% if event.likes.present? %>
+	  					<% if event.likes.count == 1 %>
+	  					- <%= link_to "1 like", event, :class => "event_link" %>
+	  					<% else %>
+	  					- <%= link_to "#{event.likes.count} likes", event, :class => "event_link" %>
+	  					<% end %>
+	  				<% else %>
+	  				<% end %>
+	  				<% if event.user.id == current_user.id %>
+	  					- <%= link_to 'Delete', event, method: :delete, data: { confirm: 'Are you sure you want to delete this?' } %>
+	  				<% else %>
+	  				<% end %>
+	  				</div>
+	  				<div style="margin-top:5px;"><%= render event.comments %></div>
+	  				<%= render 'comments/form', comment: event.comments.build, event: event %>
+	  				
+	  				</div>
+	  			</td>
 
-	  			<%= render event.comments %>
-	  			<%= render 'comments/form', comment: event.comments.build, event: event %>
 					<% end %>
-				</div>
+				</tr>
+
+			</table>
 			</ul>
 
-<div class="span4" style='height:100%'>
-	<div class="well sidebar-nav sidebar-nav-fixed" style="background-color:orange">
-	<h2>Hello, <%= current_user.name %>!</h2>
-	<div style= "margin-top:30px"><%= render 'events/form' %></div>
+<div class="span4" style='height:100%;'>
+	<div class="well sidebar-nav sidebar-nav-fixed" style="background-color:orange; margin-right:90px;">
+	<h2 style="margin-right:20px;">Hello, <%= current_user.name %>!</h2>
+	<div style= "margin-top:20px"><%= render 'events/form' %></div>
+
 </div>
 </div>
 	</div>
