--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,23 +1,53 @@
+<body class="topbar-nav" <%= (params[:controller] == 'events' && params[:action] == 'show') ? 'id=background1' : '' %>>
+  <div class="container-fluid">
+    <div class="row-fluid">
+    <div class="well span7" style = "margin-left:10px;">
+      
+      <ul style = "margin-left:30px;">
+        <table>
+          <tr>
+            <% if @event.user.uid.present? %>
+              <td valign="top"><%= image_tag Twitter.user(@event.user.uid.to_i).profile_image_url %></td>
+            <% elsif @event.user.image.present?%>
+              <td><%= image_tag @event.user.image.url(:thumb)  %></td>
+            <% else %>
+              No image yet
+            <% end %>
 
+            <td>
+            <div class="home_left">
+            <div style="font-weight:bold;">
+              <%= link_to @event.user.name, user_path(@event.user) %> 
+              <%= link_to "- #{@event.description}", @event, :class => "event_link" %></div>
+            <div>
+              <img width="450" height="400" src=  "<%= @event.link %>" 
+                    class="img-polaroid" style="margin-top:10px;"></div>
+            <div style="font-size:12px; margin-top:5px;"><%= link_to "Posted #{time_ago_in_words(@event.created_at)} ago", @event, :class => "event_link" %>
+            <% if @event.comments.present? %>
+              - <%= link_to "#{@event.comments.count} comments", @event, :class => "event_link"%>
+            <% else %>
+            <% end %>
+            <% if @event.user.id == current_user.id %>
+              - <%= link_to 'Delete', @event, method: :delete, data: { confirm: 'Are you sure you want to delete this?' } %>
+            <% else %>
+            <% end %>
+            </div>
+            <div style="margin-top:5px;"><%= render @event.comments %></div>
+            <%= render 'comments/form', comment: @event.comments.build, event: @event %>
+            </div>
+          </td>
+    
 
-<table>
-  <tr>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+      </table>
+      </ul>
 
-  <tr>
-    <td><%= @event.description %></td>
-    <td><img width="300" height="300" src=  "<%= @event.link %>" ></td>
-    <td><b>Created:</b> <%= time_ago_in_words(@event.created_at) %> ago </td>
-  	<td><b>Updated:</b> <%= time_ago_in_words(@event.updated_at) %> ago </td>
-    <td><%= link_to 'Show', @event %></td>
-    <td><%= link_to 'Edit', edit_event_path(@event) %></td>
-    <td><%= link_to 'Destroy', @event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-  
-  <tr>
+<div class="span4" style='height:100%;'>
+  <div class="well sidebar-nav sidebar-nav-fixed" style="background-color:orange; margin-right:90px;">
+  <h2 style="margin-right:20px;">Hello, <%= current_user.name %>!</h2>
+  <div style= "margin-top:20px"><%= render 'events/form' %></div>
 
-  </tr>
-</table>
+</div>
+</div>
+  </div>
+</div>
+</body>
