--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,25 +18,38 @@
 
                 <td>
                   <div class="home_left">
-                    <div style="font-weight:bold;">
-                      <%= link_to event.user.name, user_path(event.user) %> 
-                      <%= link_to "- #{event.description}", event, :class => "event_link" %>
-                    </div>
-                    <div>
-                      <img width="450" height="400" src=  "<%= event.link %>" 
-                          class="img-polaroid" style="margin-top:10px;">
-                    </div>
-                    <div style="font-size:12px; margin-top:5px;"><%= link_to "Posted #{time_ago_in_words(event.created_at)} ago", event, :class => "event_link" %>
-                      <% if event.comments.present? %>
-                        - <%= link_to "#{event.comments.count} comments", event, :class => "event_link"%>
-                      <% else %>
-                      <% end %>
-                      <% if event.user.id == current_user.id %>
-                        - <%= link_to 'Delete', event, method: :delete, data: { confirm: 'Are you sure you want to delete this?' } %>
-                        - <%= link_to 'Edit', edit_event_path(event) %>
-                      <% else %>
-                      <% end %>
-                    </div>
+                  <div style="font-weight:bold; font-size:16px;">
+                  <%= link_to event.user.name, user_path(event.user) %> 
+                  <div><%= link_to " #{event.description}", event, :class => "event_link" %></div>
+                  </div>
+
+                  <div>
+                  <%if event.link.present? %>
+                  <img width="450" height="400" src=  "<%= event.link %>" 
+                        class="img-polaroid" style="margin-top:10px;">
+                  <% else %>
+                  <% end %>
+                  </div>
+
+                  <div style="font-size:12px; margin-top:5px;"><%= link_to "Posted #{time_ago_in_words(event.created_at)} ago", event, :class => "event_link" %>
+                  <% if event.comments.present? %>
+                    - <%= link_to "#{event.comments.count} comments", event, :class => "event_link"%>
+                  <% else %>
+                  <% end %>
+                  <% if event.likes.present? %>
+                    <% if event.likes.count == 1 %>
+                    - <%= link_to "1 like", event, :class => "event_link" %>
+                    <% else %>
+                    - <%= link_to "#{event.likes.count} likes", event, :class => "event_link" %>
+                    <% end %>
+                  <% else %>
+                  <% end %>
+                  <% if event.user.id == current_user.id %>
+                    - <%= link_to 'Delete', event, method: :delete, data: { confirm: 'Are you sure you want to delete this?' } %>
+                  <% else %>
+                  <% end %>
+                  </div>
+
                     <div style="margin-top:5px;"><%= render event.comments %></div>
                       <%= render 'comments/form', comment: event.comments.build, event: event %>
                   </div>
@@ -48,9 +61,10 @@
 
       <div class="span4" style='height:100%;'>
         <div class="well sidebar-nav sidebar-nav-fixed" style="background-color:orange; margin-right:90px;">
-          <h2 style="margin-right:20px;">Profile</h2>
+          <h2 style="margin-right:20px;"><%=time_ago_in_words(@user.created_at)%> and counting <i class="icon-search icon-heart" style="margin-top:13px;"> </i></h2>
           <%= link_to 'Edit Profile', edit_user_path(@user) %>
-            <div style= "margin-top:10px; font-size:16px;">
+            
+              <div style= "margin-top:10px; font-size:16px;">
               <% if @user.uid.present? %>
                 <td><%= image_tag Twitter.user(@user.uid.to_i).profile_image_url %></td>
               <% elsif @user.image.present? %>
@@ -59,6 +73,13 @@
                 <td>No image yet</td>
               <% end %>
               <td class="profile"><%= @user.name %></td>
+              
+              <td></td>
+              <div style="margin-top:40px;">
+                <td><%= @user.events.count %> Posts</td>
+                <td><%= @user.follows.count %> Friends </td>
+                <td>
+              </div>
                 
               </div>
               </tr>
